# rust-sc2

./: .gitignore  Cargo.toml  PATHFINDING.md  PATHFINDING_ADVANCED.md  README.md  generate_ids.py  generate_research_abilities.py  generate_unit_abilities.py
.github/workflows/: rust.yml
examples/: pathfinding_bot.rs  research_bot.rs  siege_tank_tactics.rs  simple_lazy_bot.rs
sc2-macro/macro/: Cargo.toml
sc2-macro/macro/src/: lib.rs
sc2-pathfinding/: .gitignore  Cargo.toml
sc2-pathfinding/examples/: advanced_features.rs  basic_pathfinding.rs
sc2-pathfinding/src/: lib.rs
sc2-pathfinding/src/helpers/: mod.rs
sc2-pathfinding/src/mapping/: chokes.rs  connections.rs  influence.rs  map.rs  map_point.rs  mod.rs  tactical.rs  vision.rs  zones.rs
sc2-pathfinding/src/path_find/: mod.rs
sc2-pathfinding/tests/: AutomatonLE.txt  choke.txt  choke_height.txt  common.rs  test_map.rs  test_pathfinding.rs  test_tactical.rs
sc2-proto/: Cargo.toml
sc2-proto/src/: common.rs  data.rs  debug.rs  error.rs  query.rs  raw.rs  sc2api.rs  score.rs  spatial.rs  ui.rs
src/: bot.rs  client.rs  consts.rs  game_state.rs  geometry.rs  lib.rs  pixel_map.rs  player.rs  unit.rs
src/dicts/: mod.rs  research_abilities.rs  unit_abilities.rs
src/ids/: ability_id.rs  buff_id.rs  effect_id.rs  unit_typeid.rs  upgrade_id.rs
src/units/: iter.rs  mod.rs
src/utils/: mod.rs
tests/: bot_affordability.rs  integration.rs  pathfinding.rs  research_abilities.rs  unit_abilities.rs
