[package]
name = "sc2-pathfinding"
version = "1.0.0"
edition = "2021"
authors = []

[lib]
bench = false
name = "sc2pathfinding"
crate-type = ["rlib"]

[dependencies]
quote = "1.0.41"
pathfinding = "4.14.0"
arrayvec = "0.7.6"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "path_benchmark"
harness = false

[profile.release]
opt-level = 3
debug = false
# panic="abort"
# lto = "fat"  
# codegen-units = 1

[[example]]
name = "basic_pathfinding"
path = "examples/basic_pathfinding.rs"

[[example]]
name = "advanced_features" 
path = "examples/advanced_features.rs"